--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ body {
   font-weight: 400;
   line-height: 1.4;
   font-family: "Nanum Gothic", serif;
+  height: 3000px;
 }
 img {
   display: block;
@@ -20,6 +21,10 @@ a {
 
 /* HEADER */
 header {
+  /* position: relative; */
+  width: 100%;
+  position: fixed;
+  top: 0;
   background-color: #f6f5f0;
   border-bottom: 1px solid #c8c8c8;
 }
@@ -123,15 +128,21 @@ header .main-menu .item:hover .item__name {
   background-color: #2c2a29;
   color: #669900;
   border-radius: 6px 6px 0 0;
+  transition: 0.4s;
 }
 header .main-menu .item .item__contents {
   width: 100%;
   position: fixed;
   left: 0;
-  display: none;
+  /* display: none; display에는 transition 속성을 적용할 수 없음*/
+  visibility: hidden; /*화면에서 숨김*/
+  opacity: 0; /*처음에 눈에 보이지 않음*/
+  transition: opacity 0.4s ease-in-out, visibility 0.4s ease-in-out; /* 부드러운 전환 효과 */
 }
 header .main-menu .item:hover .item__contents {
-  display: block;
+  /* display: block; */
+  visibility: visible;
+  opacity: 1;
 }
 header .main-menu .item .item__contents .contents__menu {
   background-color: #2c2a29;
@@ -168,6 +179,7 @@ header
 header .main-menu .item .item__contents .contents__texture {
   padding: 26px 0;
   font-size: 12px;
+  width: 100%;
   background-image: url("../images/main_menu_pattern.jpg");
 }
 header .main-menu .item .item__contents .contents__texture h4 {
@@ -177,4 +189,16 @@ header .main-menu .item .item__contents .contents__texture h4 {
 header .main-menu .item .item__contents .contents__texture p {
   color: #669900;
   margin: 4px 0 14px;
+}
+header .badges {
+  position: absolute;
+  top: 132px;
+  right: 12px;
+}
+header .badges .badge {
+  border-radius: 10px;
+  overflow: hidden;
+  margin-bottom: 12px;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
 }
